force-app/main/default/objects/Refferal_Request__c/Refferal_Request__c.object-meta.xml
<CustomObject>
    <label>Referral Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Refferal Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>