force-app/main/default/objects/Refferal_Request__c/fields/CASESAFEID__c.field-meta.xml
<CustomField>
    <fullName>CASESAFEID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CASESAFEID</label>
    <type>Text</type>
</CustomField>