force-app/main/default/objects/Refferal_Request__c/fields/MembershipActivity__c.field-meta.xml
<CustomField>
    <fullName>MembershipActivity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referral Request</relationshipLabel>
    <relationshipName>Referral_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>