force-app/main/default/objects/Refferal_Request__c/fields/Ref_Status__c.field-meta.xml
<CustomField>
    <fullName>Ref_Status__c</fullName>
    <label>Ref Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reference Requested</fullName>
            </value>
            <value>
                <fullName>Reference Provided</fullName>
            </value>
            <value>
                <fullName>Reference Denied</fullName>
            </value>
            <value>
                <fullName>Reference Contacted</fullName>
            </value>
            <value>
                <fullName>Reference Requested - No Response</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>