force-app/main/default/objects/Refferal_Request__c/fields/RefCompany__c.field-meta.xml
<CustomField>
    <fullName>RefCompany__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Request</relationshipLabel>
    <relationshipName>Referral_Request</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>