force-app/main/default/objects/Refferal_Request__c/fields/Top_Markets__c.field-meta.xml
<CustomField>
    <fullName>Top_Markets__c</fullName>
    <label>Top Markets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK-ANCHORAGE</fullName>
            </value>
            <value>
                <fullName>AL-CENTRAL ALABAMA</fullName>
            </value>
            <value>
                <fullName>AL-NORTH ALABAMA</fullName>
            </value>
            <value>
                <fullName>AL-NORTH CENTRAL ALABAMA</fullName>
            </value>
            <value>
                <fullName>AL-SOUTH ALABAMA</fullName>
            </value>
            <value>
                <fullName>AR-LITTLE ROCK</fullName>
            </value>
            <value>
                <fullName>AZ-PHOENIX</fullName>
            </value>
            <value>
                <fullName>AZ-RURAL ARIZONA</fullName>
            </value>
            <value>
                <fullName>AZ-TUCSON</fullName>
            </value>
            <value>
                <fullName>CA-CENTRAL COAST</fullName>
            </value>
            <value>
                <fullName>CA-FRESNO</fullName>
            </value>
            <value>
                <fullName>CA-KERN COUNTY</fullName>
            </value>
            <value>
                <fullName>CA-L.A. , ORANGE &amp; VENTURA</fullName>
            </value>
            <value>
                <fullName>CA-PalmSpng,Riversde,SanBern</fullName>
            </value>
            <value>
                <fullName>CA-PALMSPNG,RIVERSIDE,SANBERN</fullName>
            </value>
            <value>
                <fullName>CA-SACRAMENTO</fullName>
            </value>
            <value>
                <fullName>CA-SAN DIEGO</fullName>
            </value>
            <value>
                <fullName>CA-SAN FRANCISCO</fullName>
            </value>
            <value>
                <fullName>CA-SantaBarb,SanLuisObispo</fullName>
            </value>
            <value>
                <fullName>CO-DENVER</fullName>
            </value>
            <value>
                <fullName>CT-FAIRFIELD</fullName>
            </value>
            <value>
                <fullName>CT-HARTFORD/OTHER CT</fullName>
            </value>
            <value>
                <fullName>DC-WASHINGTON DC</fullName>
            </value>
            <value>
                <fullName>DE-WILMINGTON</fullName>
            </value>
            <value>
                <fullName>FL-JACKSONVILLE</fullName>
            </value>
            <value>
                <fullName>FL-MIAMI</fullName>
            </value>
            <value>
                <fullName>FL-ORLANDO</fullName>
            </value>
            <value>
                <fullName>FL-PENSACOLA</fullName>
            </value>
            <value>
                <fullName>FL-TAMPA</fullName>
            </value>
            <value>
                <fullName>GA-ATHENS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>