force-app/main/default/objects/Refferal_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MembershipActivity__c</columns>
    <columns>RefCompany__c</columns>
    <columns>Top_Markets__c</columns>
    <columns>Ref_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>